# nagoya-bus-mcp

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE  README.ja.md  README.md  pyproject.toml  vocabulary.md
.github/: dependabot.yml
.github/workflows/: ci.yml
demo/: __init__.py  agent.py  client.py
nagoya_bus_mcp/: __main__.py  approach.py  client.py  data.py
nagoya_bus_mcp/mcp/: __init__.py  prompts.py  server.py  tools.py
src/nagoya_bus_mcp/: __init__.py  client.py
src/nagoya_bus_mcp/mcp/: server.py  tools.py
tests/: approach_test.py  client_test.py  conftest.py  data_test.py  integration_test.py  types.py
tests/fixtures/: buspole_infos.json  busstops_41200.json  diagrams_41200.json  realtime_approach_1123002.json  realtime_approach_multiple_positions.json  routes_1123002.json  station_name.json
