[build-system]
requires = ["setuptools_scm>=8"]

[project]
dynamic = ["version"]
name = "nagoya-bus-mcp"
description = "Model Context Protocol (MCP) server providing tools to query Nagoya City bus timetables"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Yusuke Miyazaki", email = "miyazaki.dev@gmail.com" },
]
maintainers = [
    { name = "Yusuke Miyazaki", email = "miyazaki.dev@gmail.com" },
]
license = "MIT"
license-files = ["LICENSE"]
keywords = [
    "mcp",
    "model context protocol",
    "fastmcp",
    "nagoya",
    "bus",
    "public transport",
    "transit",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "fastmcp>=2.10.6",
    "httpx>=0.28.1",
    "pydantic>=2.11.7",
]

[project.urls]
Homepage = "https://github.com/ymyzk/nagoya-bus-mcp"
Repository = "https://github.com/ymyzk/nagoya-bus-mcp"
Issues = "https://github.com/ymyzk/nagoya-bus-mcp/issues"

[project.scripts]
nagoya-bus-mcp = "nagoya_bus_mcp.__main__:main"

[dependency-groups]
dev = [
    "mypy>=1.17.0",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-randomly>=3.16.0",
    "pytest-cov>=6.2.1",
]

[tool.mypy]
files = ["nagoya_bus_mcp", "tests"]
plugins = ["pydantic.mypy"]
strict = true

[tool.pytest.ini_options]
addopts = "--cov -m 'not integration' --strict"
markers = [
    "integration: mark a test as an integration test",
]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812", "D", "FIX002", "PLC2401", "T201", "TD"]

[tool.ruff.lint.isort]
force-sort-within-sections = true

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    # flake8-bandit: assert
    "S101",
]

[tool.setuptools_scm]
# Workaround for https://github.com/dependabot/dependabot-core/issues/12340
fallback_version = "0.0.0"
version_file = "nagoya_bus_mcp/version.py"

[tool.uv]
package = true
cache-keys = [{ file = "pyproject.toml" }, { git = { commit = true } }]
